--- a/views/index.html
+++ b/views/index.html
@@ -94,6 +94,60 @@
 <div class="container my-container">
   <div class="row">
     <div class="col-md-8">
+      <!-- 问答 -->
+      <div class="box">
+        <div class="box-header">
+          <img src="static/imgs/view.png" alt="" class="box-title-icon">
+          <h2 class="box-title">问答</h2>
+        </div>
+        <div class="box-content">
+          <ul class="qt-list">
+            <li class="qt-item">
+              <div class="qt-rank">
+                <div class="qt-view">
+                  <p class="num">123</p>
+                  <p class="text">查看</p>
+                </div>
+                <div class="qt-answers">
+                  <p class="num">0</p>
+                  <p class="text">阅读</p>
+                </div>
+              </div>
+              <div class="qt-summary">
+                <div class="author-info">
+                  <a href="#" class="author-name">微社区</a>
+                  <span class="push-time">刚刚</span>
+                </div>
+                <a href="#">
+                <h2 class="qt-title">在 CPU 资源没有耗尽的情况，为何系统会出现大量的负载排队情况在 </h2>
+                </a>
+              </div>
+            </li>
+            <li class="qt-item">
+              <div class="qt-rank">
+                <div class="qt-view">
+                  <p class="num">123</p>
+                  <p class="text">查看</p>
+                </div>
+                <div class="qt-answers">
+                  <p class="num">0</p>
+                  <p class="text">阅读</p>
+                </div>
+              </div>
+              <div class="qt-summary">
+                <div class="author-info">
+                  <a href="#" class="author-name">微社区</a>
+                  <span class="push-time">刚刚</span>
+                </div>
+                <a href="#">
+                <h2 class="qt-title">微信公众号外H5页面如何获取openID？</h2>
+                </a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- 文章 -->
       <div class="box">
         <div class="box-header">
           <img src="static/imgs/view.png" alt="" class="box-title-icon">
@@ -178,7 +232,7 @@
 
 
 <footer class="footer">
-  <p class="copyright"><img src="static/imgs/logo.png" class="logo" alt="">&copy;微社区版权所有&nbsp;make by <a href="#">@lanyue</a></p>
+  <p class="copyright"><img src="static/imgs/logo.png" class="logo" alt="">&copy;微社区版权所有&nbsp;make by <a href="https://mengdu.github.io" target="_blank">@lanyue</a></p>
 </footer>
 
 <script type="text/javascript" src="static/js/jquery-2.2.3.min.js"></script>
